2011-08-07  Murray Cumming  <murrayc@murrayc.com>

	CanvasGroupGrid: Simplify rule creation.

	* glom/utility_widgets/canvas/canvas_group_grid.[h|cc]:
	create_grid_or_rule_line(): Rename to create_rule_line(), removing 
	the bool, because that is what it is used for.

2011-08-07  Murray Cumming  <murrayc@murrayc.com>

	Canvas_PrintLayout: Move all selected items when dragging.

	* glom/utility_widgets/canvas/canvas_item_movable.[h|cc]:
	signal_moved(): Send the item (for convenience, to avoid dodgy use of
	sigc::bind() with RefPtr<>s) and the offset of just the current part 
	of the move.
	* glom/utility_widgets/canvas/canvas_group_resizable.[h|cc]:
	* glom/mode_design/relationships_overview/dialog_relationships_over
	view.[h|cc]: Adapt.
	* glom/mode_design/print_layouts/window_print_layout_edit.[h|cc]:
	on_selected_item_moved(): Move all the other selected items by the 
	same amount.

2011-08-07  Murray Cumming  <murrayc@murrayc.com>

	Canvas_PrintLayout: Selecting unselects others. Allow shift-clicking.

	* glom/utility_widgets/canvas/canvas_item_movable.[h|cc]:
	signal_selected(): Also send the item (this), to avoid the need for 
	awkward (due to keeping a reference) sigc::bind()ing of RefPtr<>s.
	Send a bool group_select parameter too, so we know if the button 
	press (corresponding to the button release) was with the shift key 
	held down.
	* glom/utility_widgets/canvas/canvas_editable.[h|cc]:
	on_item_selected(): Deselect other already-selected items if 
	the select was not with shift held down.

2011-08-06  Murray Cumming  <murrayc@murrayc.com>

	CanvasItemMovable: set_selected(): Do not emit the signal here.

	* glom/utility_widgets/canvas/canvas_item_movable.cc:
	set_selected(): Do not emit signal_selected here, because it should 
	only be emitted when the user causes it.
	on_button_release_event(), on_motion_notify_event():
	Emit the signal if necessary.

2011-08-06  Murray Cumming  <murrayc@murrayc.com>
